# CSIRO-Image2BioMass-Kaggle

./: .gitignore  README.md  baseline.ipynb  exploration.ipynb  main.py  pyproject.toml
