[project]
name = "csiro-image2biomass-kaggle"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.8",
    "notebook>=7.5.1",
    "opencv-python>=4.12.0.88",
    "polars>=1.36.1",
    "rasterio>=1.4.4",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
]
